--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ rand = "0.8.5"
 regex = "1.10.4"
 rustyline = "14.0.0"
 rustyline-derive = "0.10.0"
-serde = "1.0.200"
+serde = { version = "1.0.200", features = ["derive"] }
 serde_bytes = "0.11.14"
 simplelog = "0.12.2"
 uuid = { version = "1.8.0", features = ["serde", "v4"] }
